--- a/pom.xml
+++ b/pom.xml
@@ -83,11 +83,11 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Swagger for API Documentation -->
+        <!-- SpringDoc OpenAPI for API Documentation -->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-boot-starter</artifactId>
-            <version>3.0.0</version>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.15</version>
         </dependency>
     </dependencies>
 
